--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -3,7 +3,7 @@
     grid-template-columns: 1fr 1fr;
     align-items: center;
     gap: 60px;
-    margin-top: 65px !important;
+    margin-top: 150px !important;
     padding-top: 0 !important;
     padding-bottom: 40px;
     position: relative;
@@ -375,7 +375,7 @@
     }
 
     .heroContainer {
-        margin-top: 60px !important;
+        margin-top: 120px !important;
         gap: 30px;
     }
 
