--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -1,6 +1,7 @@
 .navbar {
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     padding: 20px 0;
     z-index: 50;
